fix extra padding 100% height issue

--- a/assets/stylesheets/global.scss
+++ b/assets/stylesheets/global.scss
@@ -93,8 +93,10 @@ footer {
     border-radius: 4px;
 }
 
-.sideways {
-    writing-mode: tb-rl;
-    transform: rotate(-180deg);
-    height: 100%;
+@media all and (min-width: 600px) {
+    .sideways {
+        writing-mode: tb-rl;
+        transform: rotate(-180deg);
+        height: 100%;
+    }
 }
