--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -7,21 +7,6 @@
     position: relative;
 }
 
-.horizontal-container {
-    display: flex;
-    overflow-x: auto;
-    overflow-y: hidden;
-    height: 100%;
-    width: 100%;
-    
-    a {
-        flex-direction: row;
-        height: 100%;
-        display: flex;
-
-    }
-}
-
 .pad-sideways {
     margin-bottom: 60px;
 }
@@ -30,12 +15,27 @@
     margin-bottom: 30px;
 }
 
-.full-height-image {
-    display: block;
-    object-fit: cover;
-}
 
 @media all and (min-width: 601px) {
+    .horizontal-container {
+        display: flex;
+        overflow-x: auto;
+        overflow-y: hidden;
+        height: 100%;
+        width: 100%;
+        
+        a {
+            flex-direction: row;
+            height: 100%;
+            display: flex;
+            
+        }
+    }
+    
+    .full-height-image {
+        display: block;
+        object-fit: cover;
+    }
 
     .pad-credit-text {
         padding: 5px 10px 0px 40px;
@@ -46,22 +46,22 @@
 }
 
 @media all and (max-width: 600px) {
+
     .horizontal-container {
+        overflow-x: hidden;
         overflow-y: auto;
-        flex-direction: column;
+        
         a {
-            flex-direction: column;
-            height: auto;
-            width: 100%;
+            display: inline-block;
         }
         .full-height-image {
-            object-fit: scale-down;
+            display: inline-block;
+            height: auto;
             width: 100%;
+            max-width: 100%;
         }
-    
         .credit-text {
-            writing-mode: lr;
-            transform: rotate(0deg);
+            display: inline-block;
             padding: 5px 10px;
             margin-top: 0px;
         }
